@@ -9,6 +9,8 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.ArrayList;
@@ -53,12 +55,13 @@ public class MultipartMessage {
      * @param charSet    character set encoding of this message
      * @throws IOException if {@link OutputStream} cannot be created
      */
-    public MultipartMessage(String requestURL, String charSet) throws IOException {
+    public MultipartMessage(String requestURL, String charSet)
+            throws IOException, URISyntaxException {
         this.charSet = charSet;
 
         // create unique multi-part message boundary
         boundary = "===" + System.currentTimeMillis() + "===";
-        URL url = new URL(requestURL);
+        URL url = new URI(requestURL).toURL();
         httpConn = (HttpURLConnection) url.openConnection();
         httpConn.setUseCaches(false);
         httpConn.setDoOutput(true);
